<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JavaRun</string>
    <string name="name">Name</string>

    <string name="toppings">Toppings</string>
    <string name="w_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>

    <string name="quantity">Quantity</string>

    <string name="minus">-</string>
    <string name="plus">+</string>

    <string name="two">2</string>

    <string name="order">order</string>

    <string name="toast_plus">You cannot have more than 100 cups of coffee</string>
    <string name="toast_less">You cannot have less than 1 cup of coffee</string>

    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_summary_w_cream">Add whipped cream? <xliff:g id="w_cream" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="add_c" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quant" example="0">%d</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g id="tot" example="$5">%s</xliff:g></string>

    <string name="order_summary_message">JustJava order by: <xliff:g id="jjob" example="Felix">%s</xliff:g></string>

    <string name="thank_you">Thank you!</string>
    <string name="open_website">website</string>
    <string name="open_location">location</string>
    <string name="share_text">share</string>
</resources>
